<resources>
    <string name="app_name">ProfitWizard</string>

    <string name="logo_text">ProfitWizard</string>

    <string name="rezult">CALCULATE</string>
    <string name="zaplatil">Total costs:</string>
    <string name="plus_steam">Income :</string>
    <string name="zist_pribil">Profit :</string>
    <string name="kpd_vigodi">Efficiency benefits:</string>
    <string name="exeption_date_input">Enter the data!</string>
    <string name="currency">Rub</string>
    <string name="rezults_text">Results :</string>
    <string name="c_d_background">Background</string>
    <string name="profit_one_piece">Profit per item : </string>


    <string name="c_d_bacgrund_futer">Background of the name</string>

    <string name="t_neam">Product Name</string>
    <string name="t_cost_bay">Cost of buying the product rub</string>
    <string name="t_cost_sale">Cost of sale of goods rub</string>
    <string name="t_comsion_sale">Sales commission %</string>
    <string name="t_count">Quantity of goods pc</string>
    <string name="t_imageButton_actual_valute">Button to announce exchange rates</string>


    <string name="t_bt_imageView_evro_bacgraund">Button euro</string>
    <string name="t_bt_imageView_yany_bacgraund">Button yuan</string>
    <string name="t_bt_imageView_dolar_bacgraund">Button dolar</string>

    <string name="t_imageView_evro_bacgraund">Euro icon</string>
    <string name="t_imageView_yany_bacgraund">Yuan icon</string>
    <string name="t_imageView_dolar_ico">Dolar icon</string>

    <string name="neam">Laptop</string>
    <string name="site_price">0 rubles.</string>
    <string name="auto_zak_steam">0 rubles.</string>
    <string name="commission_in_sale">0 %</string>
    <string name="count_items">0 pc</string>
    <string name="null_valute_rub">00000 rubles.</string>
    <string name="null_valute_dolar">00000 $</string>

    <string name="bt_valute">Currency button</string>
    <string name="bt_histori">The history button</string>
    <string name="bt_main">Home button</string>


    <string name="tp_logo_app">Logo app</string>


    <string name="curs_dolar">92.45 ₽</string>
    <string name="curs_evro">99.85 ₽</string>
    <string name="curs_yanu">13.03 ₽</string>
    <string name="valute_in_contert">Currency to convert rub</string>
    <string name="valute_to_convert">The currency to convert to</string>
    <string name="rezult_contert">Result</string>

    <string name="hint_val_convert">128,82</string>
    <string name="hint_tezult_convert">1,42</string>
    <string name="convetirovat">Convert</string>

    <string name="text_warning">In the absence of an Internet connection, currencies are static; connect to the Internet</string>
    <string name="text_warning_start_lod">Update the exchange rate for a more accurate value !</string>
    <string name="select_currency">Select a currency</string>
    <string name="old_costs">Third Party Costs rubles.</string>

    <string name="cost_stalse">Price per share</string>
    <string name="course_popular_shares">The course of the 3 most popular shares of Russian companies !</string>
    <string name="update">Update</string>
</resources>