<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="45sp"
        android:contentDescription="@string/c_d_bacgrund_futer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@color/futer_bacgraund" />

    <LinearLayout
        android:id="@+id/textView_info_calculations"
        android:layout_width="380sp"
        android:layout_height="wrap_content"
        android:background="@drawable/stayl_pole"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.864">

        <TextView
            android:id="@+id/textView_rezults"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16sp"
            android:layout_marginTop="10sp"
            android:fontFamily="@font/open_sans_bold"
            android:text="@string/rezults_text"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView_profit_ietem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16sp"
            android:layout_marginTop="15sp"
            android:fontFamily="@font/open_sans_semibold"
            android:text="@string/profit_one_piece"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView_expenses"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16sp"
            android:layout_marginTop="7sp"
            android:fontFamily="@font/open_sans_semibold"
            android:text="@string/zaplatil"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView_income"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16sp"
            android:layout_marginTop="7sp"
            android:fontFamily="@font/open_sans_semibold"
            android:text="@string/plus_steam"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView_profit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16sp"
            android:layout_marginTop="7sp"
            android:fontFamily="@font/open_sans_semibold"
            android:text="@string/zist_pribil"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView_benefit_ratio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16sp"
            android:layout_marginTop="7sp"
            android:fontFamily="@font/open_sans_semibold"
            android:text="@string/kpd_vigodi"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <LinearLayout
            android:id="@+id/linearLayout_verdict"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="120sp"
            android:layout_marginTop="15sp"
            android:orientation="horizontal" />

    </LinearLayout>

    <Button
        android:id="@+id/button_rezult"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:backgroundTint="@color/orange_button_rezult"
        android:fontFamily="@font/open_sans_extrabold"
        android:text="@string/rezult"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:cornerRadius="12sp"
        app:layout_constraintBottom_toTopOf="@+id/textView_info_calculations"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout_input_section"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:id="@+id/linearLayout_input_section"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.085">

        <TextView
            android:id="@+id/textView_neam"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4sp"
            android:fontFamily="@font/open_sans_semibold"
            android:text="@string/t_neam"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/editText_neam"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_marginBottom="12sp"
            android:autofillHints="no"
            android:background="@drawable/stayl_pole"
            android:ems="10"
            android:fontFamily="@font/open_sans_semibold"
            android:hint="@string/neam"
            android:inputType="text"
            android:paddingStart="12sp"
            android:paddingEnd="12sp"
            android:textColor="@color/orange_button_rezult"
            android:textColorHint="@color/orange_button_rezult"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView_cost_by"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4sp"
            android:fontFamily="@font/open_sans_semibold"
            android:text="@string/t_cost_bay"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/editText_cost_unit_goods"
            android:layout_width="370sp"
            android:layout_height="50sp"
            android:layout_marginBottom="12sp"
            android:autofillHints="no"
            android:background="@drawable/stayl_pole"
            android:ems="10"
            android:fontFamily="@font/open_sans_semibold"
            android:hint="@string/site_price"
            android:inputType="number|numberDecimal"
            android:paddingStart="12sp"
            android:paddingEnd="12sp"
            android:textColor="@color/orange_button_rezult"
            android:textColorHint="@color/orange_button_rezult"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView_cost_sale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4sp"
            android:fontFamily="@font/open_sans_semibold"
            android:text="@string/t_cost_sale"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/editText_cost_implementation"
            android:layout_width="370sp"
            android:layout_height="50sp"
            android:layout_marginBottom="12sp"
            android:autofillHints="no"
            android:background="@drawable/stayl_pole"
            android:ems="10"
            android:fontFamily="@font/open_sans_semibold"
            android:hint="@string/auto_zak_steam"
            android:inputType="number|numberDecimal"
            android:paddingStart="12sp"
            android:paddingEnd="12sp"
            android:textColor="@color/orange_button_rezult"
            android:textColorHint="@color/orange_button_rezult"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView_comision_sale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4sp"
            android:fontFamily="@font/open_sans_semibold"
            android:text="@string/t_comsion_sale"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edit_text_comss_sale"
            android:layout_width="370sp"
            android:layout_height="50sp"
            android:layout_marginBottom="12sp"
            android:autofillHints="no"
            android:background="@drawable/stayl_pole"
            android:ems="10"
            android:fontFamily="@font/open_sans_semibold"
            android:hint="@string/commission_in_sale"
            android:inputType="number"
            android:paddingStart="12sp"
            android:paddingEnd="12sp"
            android:textColor="@color/orange_button_rezult"
            android:textColorHint="@color/orange_button_rezult"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView_count"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4sp"
            android:fontFamily="@font/open_sans_semibold"
            android:text="@string/t_count"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/editTextTextCount"
            android:layout_width="370sp"
            android:layout_height="50sp"
            android:autofillHints="no"
            android:background="@drawable/stayl_pole"
            android:ems="10"
            android:fontFamily="@font/open_sans_semibold"
            android:hint="@string/count_items"
            android:inputType="number"
            android:paddingStart="12sp"
            android:paddingEnd="12sp"
            android:textColor="@color/orange_button_rezult"
            android:textColorHint="@color/orange_button_rezult"
            android:textSize="16sp" />


    </LinearLayout>

    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="222sp"
        android:layout_height="60sp"
        android:contentDescription="@string/tp_logo_app"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_logo_new" />

    <ImageView
        android:id="@+id/imageView_futer_bagraund"
        android:layout_width="match_parent"
        android:layout_height="70sp"
        android:contentDescription="@string/c_d_bacgrund_futer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageViewLogo"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@color/futer_bacgraund" />

    <ImageButton
        android:id="@+id/imageButton_bt_home"
        android:layout_width="48sp"
        android:layout_height="48sp"
        android:background="@drawable/stily_select_butthon"
        android:contentDescription="@string/bt_main"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.99"
        app:srcCompat="@drawable/ic_home" />

    <ImageButton
        android:id="@+id/imageButton_bt_histori"
        android:layout_width="48sp"
        android:layout_height="48sp"
        android:background="@drawable/stile_bt_no_select"
        android:contentDescription="@string/bt_histori"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.719"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.992"
        app:srcCompat="@drawable/ic_histori" />

    <ImageButton
        android:id="@+id/imageButton_bt_valutes"
        android:layout_width="48sp"
        android:layout_height="48sp"
        android:background="@drawable/stile_bt_no_select"
        android:contentDescription="@string/bt_valute"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.269"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.989"
        app:srcCompat="@drawable/ic_valute" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/open_sans_semibold"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.953"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>